# agent-mcp-server

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: context.rs  main.rs  path_resolver.rs  permissions.rs
src/helpers/: mod.rs  steam_command.rs
src/tools/: cargo_exec.rs  directory_list.rs  directory_make.rs  file_edit.rs  file_edit_lines.rs  file_move.rs  file_read.rs  file_write.rs  glob.rs  gradle_exec.rs  grep.rs  ieee1905_bench.rs  lights_info.rs  mod.rs  read_file.rs
src/tools/exec/: cargo.rs  cargo_exec.rs  gradle.rs  gradle_exec.rs  mod.rs
src/tools/fs/: directory_make.rs  file_edit.rs  file_read.rs  file_read_image.rs  glob.rs  grep.rs  mod.rs
src/tools/lights/: controller.rs  lights_info.rs  lights_set_color.rs  mod.rs
src/tools/other/: ieee1905_bench.rs  mod.rs  ssh_bpi_r4.rs
