[package]
name = "mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "transport-streamable-http-server"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1"
axum = "0.8"
http = "1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
