[package]
name = "mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "transport-streamable-http-server"] }
base64 = "0.22"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
mdns-sd = "0.20"
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
anyhow = "1"
glob = "0.3.3"
axum = "0.8"
http = "1"
regex = "1.12.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
